# ml_implementations

./: .gitignore  README.md  pyproject.toml
src/classification/SVM/: halfspaces.py
src/classification/decision_trees/: decision_tree.py
src/classification/logistic_regression/: logistic_regression.py
src/clustering/k_means/: k_means.py
src/dimensionality_reduction/PCA/: pca.py
src/k_means/: k_means.py
src/regression/: linear_regression.py
src/utils/: classification.py  data.py  decision_tree_algs.py  regression.py
